--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,21 @@ endorsed.classpath=\
 excludes=
 file.reference.all-themes-1.0.10.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\all-themes-1.0.10.jar
 file.reference.BootsFaces-OSP-1.2.0-dist-default.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\BootsFaces-OSP-1.2.0-dist-default.jar
+file.reference.classmate-1.1.0.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\classmate-1.1.0.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-validator-5.2.4.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-validator-5.2.4.Final.jar
+file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-validator-annotation-processor-5.2.4.Final.jar
+file.reference.hibernate-validator-cdi-5.2.4.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-validator-cdi-5.2.4.Final.jar
+file.reference.javax.el-2.2.4.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\javax.el-2.2.4.jar
+file.reference.javax.el-api-2.2.4.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\javax.el-api-2.2.4.jar
 file.reference.javax.faces-2.2.14.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\javax.faces-2.2.14.jar
+file.reference.jboss-logging-3.2.1.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\jboss-logging-3.2.1.Final.jar
+file.reference.joda-time-2.7.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\joda-time-2.7.jar
+file.reference.jsoup-1.8.3.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\jsoup-1.8.3.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\log4j-1.2.17.jar
+file.reference.paranamer-2.5.5.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\paranamer-2.5.5.jar
 file.reference.primefaces-6.1.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\primefaces-6.1.jar
+file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,7 +63,20 @@ javac.classpath=\
     ${file.reference.BootsFaces-OSP-1.2.0-dist-default.jar}:\
     ${file.reference.all-themes-1.0.10.jar}:\
     ${file.reference.javax.faces-2.2.14.jar}:\
-    ${file.reference.primefaces-6.1.jar}
+    ${file.reference.primefaces-6.1.jar}:\
+    ${file.reference.classmate-1.1.0.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.hibernate-validator-5.2.4.Final.jar}:\
+    ${file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar}:\
+    ${file.reference.hibernate-validator-cdi-5.2.4.Final.jar}:\
+    ${file.reference.javax.el-2.2.4.jar}:\
+    ${file.reference.javax.el-api-2.2.4.jar}:\
+    ${file.reference.jboss-logging-3.2.1.Final.jar}:\
+    ${file.reference.joda-time-2.7.jar}:\
+    ${file.reference.jsoup-1.8.3.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.paranamer-2.5.5.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
